# react-trace

./: .gitignore  .ocamlformat  Makefile  README.md  dune  dune-project  flake.nix  react_trace.opam  react_trace.opam.template
.github/workflows/: ci.yml
lib/: batched_queue.ml  concrete_domains.ml  default_recorder.ml  default_recorder.mli  domains.ml  dune  interp.ml  interp_effects.ml  js_syntax.ml  lexer.mll  logger.ml  parser.mly  recorder.ml  recorder.mli  recorder_intf.ml  sexp_helper.ml  snoc_list.ml  syntax.ml  util.ml
lib/domains/: batched_queue.ml  concrete_domains.ml  domains.ml  dune  lexer.mll  parser.mly  sexp_helper.ml  snoc_list.ml  syntax.ml
lib/recorder/: dune
lib/recorder_intf/: dune  recorder_intf.ml
samples/: comp.tsx  complex.ml  record.ml  simple.ml  simple.tsx
samples/learn-react/: conditional_rendering.ml  queueing_a_series_of_state_updates.ml  your_ui_as_a_tree.ml
test/: dune  test_react_trace.ml
